Set WM_CLASS